--- a/_config.yml
+++ b/_config.yml
@@ -44,9 +44,9 @@ authors:
 
 # Social
 social:
-  instagram: https://www.instagram.com/bootstrapstarter/
-  facebook: https://www.facebook.com/bootstrapstartercom-346329609045284
-  twitter: https://twitter.com/bstartercom
+  instagram: https://www.instagram.com/ausisedu
+  facebook: https://www.facebook.com/ausisnetwork/
+  twitter: https://twitter.com/ausisedu
 
 # Plugins
 plugins: 
