--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "AuSIS"
 email: wowthemesnet@gmail.com
 timezone: UTC
 baseurl: ""
-url: "https://dave-heslop74.github.io"
+url: "https://AusisEdu.github.io"
 permalink: "/:title/"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
