--- a/_config.yml
+++ b/_config.yml
@@ -25,22 +25,14 @@ ganalytics: UA-113961478-1
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
+  ausis:
+    name: AuSIS
+    display_name: AuSIS
     avatar: 'assets/images/sal.png'
-    email: wowthemesnet@gmail.com
+    email: ausis@anu.edu.au
     web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Affiliates, a template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John
-    avatar: 'assets/images/john.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Affiliates theme demo, a Jekyll template compatible with Github pages."
+    twitter: https://twitter.com/ausisedu
+    description: "The Australian Seismometers in Schools Network"
 
 # Social
 social:
